try to prevent activity feed text from overflowing (specifically the <tt> elements)
git-svn-id: https://svn.apache.org/repos/asf/incubator/bloodhound/trunk@1446201 13f79535-47bb-0310-9956-ffa450edef68

--- a/bloodhound_theme/bhtheme/htdocs/bloodhound.css
+++ b/bloodhound_theme/bhtheme/htdocs/bloodhound.css
@@ -189,6 +189,11 @@ div.reports form {
   color: grey;
 }
 
+.activityfeed * tt {
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
 #mobile-activity {
   margin-top: 50px;
 }
